lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__encode_sampling_params.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "model": "gpt-test",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Hello"
        }
      ]
    }
  ],
  "temperature": 0.7,
  "max_output_tokens": 128,
  "top_p": 0.9,
  "stop": [
    "END"
  ],
  "metadata": {
    "trace_id": "trace-123"
  },
  "store": false,
  "include": [
    "reasoning.encrypted_content"
  ]
}
