lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__encode_tool_choice_named.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "model": "gpt-test",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Hello"
        }
      ]
    }
  ],
  "max_output_tokens": 128,
  "tools": [
    {
      "type": "function",
      "name": "search",
      "description": "Search files",
      "parameters": {
        "type": "object",
        "properties": {
          "query": {
            "type": "string"
          }
        },
        "required": [
          "query"
        ]
      }
    },
    {
      "type": "function",
      "name": "read_file",
      "description": "Read a file by path",
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          }
        }
      }
    }
  ],
  "tool_choice": {
    "type": "function",
    "name": "search"
  },
  "store": false,
  "include": [
    "reasoning.encrypted_content"
  ]
}
